# internal/router/router.go
@@ -3,6 +3,7 @@ package router
 import (
 	"gin-samples/internal/controller"
 	"gin-samples/internal/middleware"
+	"gin-samples/internal/security"
 	ut "github.com/go-playground/universal-translator"
 	swaggerFiles "github.com/swaggo/files"
 	"github.com/swaggo/gin-swagger"
@@ -12,16 +13,21 @@ import (
 
 func SetupRouter(helloController controller.HelloController,
 	healthController controller.HealthController,
-	trans ut.Translator) *gin.Engine {
+	authController controller.AuthenticationController,
+	trans ut.Translator,
+	tokenGenerator security.TokenGenerator) *gin.Engine {
 	r := gin.Default()
 	r.StaticFile("/favicon.ico", "./resources/favicons/favicon.ico")
 	r.Use(middleware.ErrorHandlingMiddleware(trans))
-
+	privateGroup := SetupPrivateRoutes(r, tokenGenerator)
 	// Add Hello routes
-	AddHelloRoutes(r, helloController)
+	AddHelloRoutes(privateGroup, helloController)
 
 	// Add Health routes
 	AddHealthRoutes(r, healthController)
+
+	// Add Authentication routes
+	AddAuthRoutes(r, authController)
 
 	// Swagger route
 	r.GET("/swagger-ui/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
